# judgement_system

./: .gitignore  Dockerfile  README.md  nohup.out  requirements.txt  runDocker.sh  run_optimize_l1.sh  run_optimize_l2.sh  run_optimize_l3.sh  typescript
data/: iris-data.npy  sequences1.csv  sequences2.csv  sequences3.csv
data/dic/: L1_data_2.pkl  L1_data_3.pkl  L1_data_4.pkl  L1_data_fromQD_1.pkl  L2_data_2.pkl  L2_data_3.pkl  L2_data_4.pkl  L3_data_2.pkl  L3_data_3.pkl  L3_data_4.pkl  x_1_2.pkl  x_fromQD_l1_1.pkl  x_l1_1.pkl  x_l1_random_1.pkl  x_l2_1.pkl  x_l3_1.pkl  x_l3_random_1.pkl  x_random_6_diffseq_l1.pkl  x_random_6_diffseq_l1_2.pkl  x_random_6_diffseq_mean_l1.pkl  x_random_l1_1.pkl  x_random_l1_3.pkl  x_random_l1_4.pkl  x_random_l1_5.pkl  x_random_l1_6.pkl  x_random_l2_1.pkl  x_random_l2_2.pkl  x_random_l2_4.pkl  x_random_l2_5.pkl  x_random_l3_1.pkl  x_random_l3_4.pkl  y_1.pkl  y_l1_1.pkl  y_l2_1.pkl  y_l3_1.pkl  y_random_6_diffseq_l1.pkl  y_random_6_diffseq_l1_2.pkl  y_random_6_diffseq_mean_l1.pkl  y_random_l1_1.pkl  y_random_l1_2.pkl  (+14 more)
input/: input_seq1.csv  input_seq2.csv  input_seq_L1.csv  input_seq_L2.csv  input_seq_L3.csv  sequences.csv  variables.csv
nupack-4.0.1.8/: README.txt
nupack-4.0.1.8/source/solver/: CMakeLists.txt
nupack-4.0.1.8/source/solver/include/nupack/concentration/: Equilibrate.h  Solve.h  Utility.h
nupack-4.0.1.8/source/solver/source/: Concentration.cc
script/: chimera.com  get_x.py  get_x2.py  get_y.py  load_results.py  load_seq.py  make_data.py  make_xy.py  make_xy2.py  mean_xy.py  neural_network.py  tmp.ipynb
(+75661 files in other folders)
